--- a/MontyHall_Game/Views/Shared/_Layout.cshtml
+++ b/MontyHall_Game/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Monty Hall Applocations", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Monty Hall Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             
         </div>
