--- a/MontyHall_Game/Views/MontyHall/Index.cshtml
+++ b/MontyHall_Game/Views/MontyHall/Index.cshtml
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="submit" class="btn btn-wide btn-info" value="Search">
+                            <input type="submit" class="btn btn-wide btn-info" value="Simulate">
                             @*@Html.ActionLink("Clear", "Index", null, new { @class = "btn btn-wide btn-primary" })*@
                         </div>
                     </div>
